--- a/contact.html
+++ b/contact.html
@@ -132,25 +132,35 @@
                 <div class="address details">
                   <i class="fas fa-map-marker-alt"></i>
                   <div class="topic">Address</div>
-                  <div class="text-one">Surkhet, NP12</div>
-                  <div class="text-two">Birendranagar 06</div>
+                  <div class="text-one">
+                    <a href="https://goo.gl/maps/pbUCwkLDEffmwu7y5">
+                    AAG – 11, Shipra Krishna Azure <br> Kaushambi, Ghaziabad, UP – 201010</a>
+                    </div>
+                  <div class="text-two"></div>
                 </div>
                 <div class="phone details">
-                  <i class="fas fa-phone-alt"></i>
+                    <i class="fa fa-phone" style="font-size:36px"></i>
                   <div class="topic">Phone</div>
-                  <div class="text-one">+0098 9893 5647</div>
-                  <div class="text-two">+0096 3434 5678</div>
+                  <div class="text-one">
+                    <a href="tel:+91 9910018925">+91 9910018925</a>
+                  </div>
+                  <div class="text-two">
+                    <a href="tel:+91-120-4567841">+91-120-4567841</a>
+                  </div>
                 </div>
                 <div class="email details">
                   <i class="fas fa-envelope"></i>
                   <div class="topic">Email</div>
-                  <div class="text-one">codinglab@gmail.com</div>
-                  <div class="text-two">info.codinglab@gmail.com</div>
+                  <div class="text-one">
+                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
+                  </div>
+                  <div class="text-two">
+                  <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a></div>
                 </div>
               </div>
               <div class="right-side">
                 <div class="topic-text">Send us a message</div>
-                <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
+                <p>If you have any query please do contact us !</p>
               <form action="#">
                 <div class="input-box">
                   <input type="text" placeholder="Enter your name">
