--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gallery.html">GALLERY</a>
+                            <a class="nav-link" href="gallery1.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">CONTACT US</a>
@@ -396,15 +396,15 @@
                         <div class="footer-widget-links">
                             <div class="footer-widget">
                                 <div class="footer-widget-heading">
-                                    <h3>Useful Links</h3>
+                                    <h3>Quick Links</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">about</a></li>
-                                    <li><a href="#">events</a></li>
-                                    <li><a href="#">Hackathon</a></li>
-                                    <li><a href="#">gallery</a></li>
-                                    <li><a href="#">Contact us</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="about.html">about</a></li>
+                                    <li><a href="event.html">events</a></li>
+                                    <li><a href="leaderboard.html">Leaderboard</a></li>
+                                    <li><a href="gallery1.html">gallery</a></li>
+                                    <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
                         </div>
