--- a/index.html
+++ b/index.html
@@ -423,7 +423,9 @@
                                     <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
                                 </div>
                                 <div class="phone details">
-                                    <div class="topic"> <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone
+                                    <div class="topic"> 
+                                        <!-- <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone -->
+                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Phone
                                     </div>
                                     <a href="tel:+91 9910018925">+91 9910018925</a>
                                     <a href="tel:+91 767846713">+91 767846713</a>
@@ -431,7 +433,7 @@
                                 </div>
                                 <div class="email details">
                                     <div class="topic"><i
-                                            class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email
+                                            class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email
                                     </div>
                                     <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
                                     <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a>
