Changes in Footer

--- a/index.html
+++ b/index.html
@@ -387,8 +387,10 @@
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
                                 <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-instagram instagram-bg"></i></a>
                                 <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in linkedin-bg"></i></a>
+                                <a href="#"><i class="fab fa-youtube youtube-bg"></i></a>
                             </div>
                         </div>
                     </div>
@@ -413,30 +415,27 @@
                         <div class="footer-widget-phone">
                             <div class="footer-widget">
                                 <div class="address details">
-
-                                    <div class="topic"> <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
+                                  <div class="footer-widget-heading">
+                                    <h3>Contact Us</h3>
+                                  </div>
+                                    <div class="topic">
                                             <i class="fa fa-map-marker"></i>
-                                        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address</div>
-                                    <div class="text-one">
-                                        AAG – 11, Shipra Krishna Azure
+                                        &nbsp;&nbsp;&nbsp;&nbsp;<strong>AAG–11, Shipra Krishna Azure, Kaushambi, Ghaziabad, U.P 201010</strong>
                                     </div>
-                                    <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
-                                </div>
-                                <div class="phone details">
+                                </div> <br>
+                                <div class="phone-details">
                                     <div class="topic"> 
                                         <!-- <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone -->
-                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Phone
+                                        <!-- <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="tel:+91 9910018925">+91 9910018925</a></strong> <br> -->
+                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="tel:+91 7678476713">+91 7678476713</a></strong> <br>
+                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong><a href="tel:+91-120-4567841">+91-120-4567841</a></strong>
                                     </div>
-                                    <a href="tel:+91 9910018925">+91 9910018925</a>
-                                    <a href="tel:+91 767846713">+91 767846713</a>
-                                    <a href="tel:+91-120-4567841">+91-120-4567841</a>
-                                </div>
-                                <div class="email details">
-                                    <div class="topic"><i
-                                            class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email
-                                    </div>
-                                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
-                                    <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a>
+                                </div> <br>
+                                <div class="email-details">
+                                    <div class="topic">
+                                        <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="mailto:info@gohackathon.in">info@gohackathon.in</a></strong>
+                                        <!-- <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a></strong> -->
+                                    </div>   
                                 </div>
                             </div>
                         </div>
@@ -453,7 +452,7 @@
                                 <div class="subscribe-form">
                                     <form action="#">
                                         <input type="text" placeholder="Email Address">
-                                        <button>send</button>
+                                        <button type="submit" class="btn btn-primary">Send</button>
                                     </form>
                                 </div>
                             </div>
