--- a/leaderboard.html
+++ b/leaderboard.html
@@ -240,64 +240,6 @@
    
     <footer class="footer-section">
         <div class="container">
-            <!-- <div class="footer-cta pt-5 pb-5">
-                <div class="row">
-                    <div class="col-xl-4 col-md-4 mb-30">
-                        <div class="single-cta">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="cta-text">
-                                <h4>Find us</h4>
-                                <span>AAG – 11, Shipra Krishna Azure <br> Kaushambi, Ghaziabad, UP – 201010</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-4 mb-30">
-                        <div class="single-cta">
-                            <i class="fas fa-phone"></i>
-                            <div class="cta-text">
-                                <h4>Call us</h4>
-                                <span>+91 9910018925,<br>+91 767846713,<br>+91-120-4567841</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-4 mb-30">
-                        <div class="single-cta">
-                            <i class="far fa-envelope-open"></i>
-                            <div class="cta-text">
-                                <h4>Mail us</h4>
-                                <span>info@gohackathon.in <br>
-                                    gohackathon2k22@gmail.com</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <!-- <div class="footer-content pt-2 pd-6">
-                <div class="">
-                    <div class="address details">
-                        <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
-                            <i class="fa fa-map-marker"></i>
-                        </a>
-                        <div class="topic">Address</div>
-                        <div class="text-one">
-                            AAG – 11, Shipra Krishna Azure
-                        </div>
-                        <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
-                    </div>
-                    <div class="phone details">
-                        <i class="fa fa-phone"></i>
-                        <div class="topic">Phone</div>
-                        <div class="text-one">+91 9910018925, +91 767846713,</div>
-                        <div class="text-two">+91-120-4567841</div>
-                    </div>
-                    <div class="email details">
-                        <i class="fas fa-envelope"></i>
-                        <div class="topic">Email</div>
-                        <div class="text-one">info@gohackathon.in</div>
-                        <div class="text-two">gohackathon2k22@gmail.com</div>
-                    </div>
-                </div>
-            </div> -->
             <div class="footer-content pt-5 pb-4">
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 footer-about">
@@ -312,8 +254,10 @@
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
                                 <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-instagram instagram-bg"></i></a>
                                 <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in linkedin-bg"></i></a>
+                                <a href="#"><i class="fab fa-youtube youtube-bg"></i></a>
                             </div>
                         </div>
                     </div>
@@ -321,15 +265,15 @@
                         <div class="footer-widget-links">
                             <div class="footer-widget">
                                 <div class="footer-widget-heading">
-                                    <h3>Useful Links</h3>
+                                    <h3>Quick Links</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">about</a></li>
-                                    <li><a href="#">events</a></li>
-                                    <li><a href="#">Hackathon</a></li>
-                                    <li><a href="#">gallery</a></li>
-                                    <li><a href="#">Contact us</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="about.html">about</a></li>
+                                    <li><a href="event.html">events</a></li>
+                                    <li><a href="leaderboard.html">Leaderboard</a></li>
+                                    <li><a href="gallery1.html">gallery</a></li>
+                                    <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -338,35 +282,31 @@
                         <div class="footer-widget-phone">
                             <div class="footer-widget">
                                 <div class="address details">
-
-                                    <div class="topic"> <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
+                                  <div class="footer-widget-heading">
+                                    <h3>Contact Us</h3>
+                                  </div>
+                                    <div class="topic">
                                             <i class="fa fa-map-marker"></i>
-                                        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address</div>
-                                    <div class="text-one">
-                                        AAG – 11, Shipra Krishna Azure
+                                        &nbsp;&nbsp;&nbsp;&nbsp;<strong>AAG–11, Shipra Krishna Azure, Kaushambi, Ghaziabad, U.P 201010</strong>
                                     </div>
-                                    <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
-                                </div>
-                                <div class="phone details">
-
-                                    <div class="topic"> <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone
+                                </div> <br>
+                                <div class="phone-details">
+                                    <div class="topic"> 
+                                        <!-- <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone -->
+                                        <!-- <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="tel:+91 9910018925">+91 9910018925</a></strong> <br> -->
+                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="tel:+91 7678476713">+91 7678476713</a></strong> <br>
+                                        <i class="fa fa-phone" style="font-size:20px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong><a href="tel:+91-120-4567841">+91-120-4567841</a></strong>
                                     </div>
-                                    <a href="tel:+91 9910018925">+91 9910018925</a>
-                                    <a href="tel:+91 767846713">+91 767846713</a>
-                                    <a href="tel:+91-120-4567841">+91-120-4567841</a>
-                                </div>
-                                <div class="email details">
-
-                                    <div class="topic"><i
-                                            class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email
-                                    </div>
-                                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
-                                    <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a>
+                                </div> <br>
+                                <div class="email-details">
+                                    <div class="topic">
+                                        <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="mailto:info@gohackathon.in">info@gohackathon.in</a></strong>
+                                        <!-- <i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a></strong> -->
+                                    </div>   
                                 </div>
                             </div>
                         </div>
                     </div>
-
                     <div class="col-xl-3 col-lg-3 col-md-6 ">
                         <div class="footer-widget-subscribe">
                             <div class="footer-widget">
@@ -379,7 +319,7 @@
                                 <div class="subscribe-form">
                                     <form action="#">
                                         <input type="text" placeholder="Email Address">
-                                        <button>send</button>
+                                        <button type="submit" class="btn btn-primary">Send</button>
                                     </form>
                                 </div>
                             </div>
