--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
+                            <a class="nav-link active" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
@@ -386,11 +387,11 @@
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
-                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="#"><i class="fab fa-instagram instagram-bg"></i></a>
-                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-linkedin-in linkedin-bg"></i></a>
-                                <a href="#"><i class="fab fa-youtube youtube-bg"></i></a>
+                                <a href="https://www.facebook.com/people/GoHackathon/100088250115623/"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="https://www.instagram.com/gohackathon/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram instagram-bg"></i></a>
+                                <a href="https://twitter.com/GoHackathon"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="https://www.linkedin.com/in/go-hackathon-a082b9264/"><i class="fab fa-linkedin-in linkedin-bg"></i></a>
+                                <a href="https://www.youtube.com/@gohackathon/videos"><i class="fab fa-youtube youtube-bg"></i></a>
                             </div>
                         </div>
                     </div>
