--- a/event.html
+++ b/event.html
@@ -90,7 +90,7 @@
 
                 <!-- nav menu -->
 
-                <div class="collapse navbar-collapse" id="wbnav">
+                <!-- <div class="collapse navbar-collapse" id="wbnav">
                   <ul class="navbar-nav mr-auto" id="wbnav">
                     <li class="nav-itemsub">
                       <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live
@@ -107,7 +107,7 @@
 
                   </ul>
 
-                </div>
+                </div> -->
               </nav>
             </div>
           </div>
