Updated payment and event page

--- a/event.html
+++ b/event.html
@@ -87,27 +87,6 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#wbnav"
                   aria-controls="wbnav" aria-expanded="false" aria-label="Toggle navigation"><span
                     class="fa fa-bars"></span></button>
-
-                <!-- nav menu -->
-
-                <!-- <div class="collapse navbar-collapse" id="wbnav">
-                  <ul class="navbar-nav mr-auto" id="wbnav">
-                    <li class="nav-itemsub">
-                      <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live
-                          Events</a></button>
-                    </li>
-                    <li class="nav-itemsub">
-                      <button type="button" class="btn btn-primary"><a href="" class="nav-link">Up coming
-                          Events</a></button>
-                    </li>
-                    <li class="nav-itemsub">
-                      <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past
-                          Events</a></button>
-                    </li>
-
-                  </ul>
-
-                </div> -->
               </nav>
             </div>
           </div>
@@ -115,49 +94,61 @@
       </header>
 
       <!-- *** header area end *** -->
+      <img src="img/eve.png" alt="" width="1519px" height="600px" style=" margin-top: 130px;  position: relative;
+      text-align: center;
+    ">
+      <h2 style=" position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%) ; color: white;;
+    ">EVENTS</h2> <br> <h4 style=" position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);  color: white;
+">It always seems impossible until its done</h4>
 
       <div class="container">
         <div class="card-container">
           <div class="row">
             <div class="card-deck">
               <div class="card">
-                <img class="card-img-top" src="img/1.jpg" alt="Krishi Vikalp">
+                <img class="card-img-top" src="img/Krishi.jpg" alt="Krishi Vikalp">
                 <div class="card-body">
                   <h4><strong>KRISHI-VIKALP</strong></h4>
                   <p class="card-text">It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with
                     your entrepreneurial skills</p>
                 </div>
-                <button class="btn btn-primary">Know More</button>
+                <a href="payment.html"><button class="btn btn-primary">Register Now</button ></a> 
               </div>
 
               <div class="card">
-                <img class="card-img-top" src="img/2.jpg" alt="Card image cap">
+                <img class="card-img-top" src="img/img.png" alt="Card image cap" height="175px">
                 <div class="card-body">
                   <h4><strong>HACKATHON</strong></h4>
                   <p class="card-text">Develop and show your soft skills , which will be coupled with your coding skills
                   </p>
                 </div>
-                <button class="btn btn-primary">Know More</button>
+                <a href="payment.html"><button class="btn btn-primary">Register Now</button></a> 
               </div>
 
               <div class="card">
-                <img class="card-img-top" src="img/3.jpg" alt="Card image cap">
+                <img class="card-img-top" src="img/img5.png" alt="Card image cap" height="175px">
                 <div class="card-body">
                   <h4><strong>IDEATHON</strong></h4>
                   <p class="card-text">Innovation is taking two things that exist and putting them together in a new
                     way.</p>
                 </div>
-                <button class="btn btn-primary">Know More</button>
+                <a href="payment.html"><button class="btn btn-primary">Register Now</button></a> 
               </div>
 
               <div class="card">
-                <img class="card-img-top" src="img/4.jpg" alt="Card image cap">
+                <img class="card-img-top" src="img/img2.jpeg" alt="Card image cap">
                 <div class="card-body">
                   <h4><strong>COMPETITION</strong></h4>
                   <p class="card-text">There is only one thing stronger than all the armies of the world: and that is an
                     idea whose time has come.</p>
                 </div>
-                <button class="btn btn-primary">Know More</button>
+               <a href="payment.html"><button class="btn btn-primary">Register Now</button></a> 
               </div>
             </div>
           </div>
