--- a/payment.html
+++ b/payment.html
@@ -90,7 +90,7 @@ input[type="submit"]:hover{
 <header>
 	<div class="container">
 		<div class="left">
-			<h3>BILLING ADDRESS</h3>
+			<h3>Enrollment Details</h3>
 			<form>
 				Full name
 				<input type="text" name="" placeholder="Enter name">
@@ -104,13 +104,30 @@ input[type="submit"]:hover{
 				<input type="text" name="" placeholder="Enter City">
 				<div id="zip">
 					<label>
-						State
+						City
 						<select>
-							<option>Choose State..</option>
-							<option>Rajasthan</option>
-							<option>Hariyana</option>
-							<option>Uttar Pradesh</option>
-							<option>Madhya Pradesh</option>
+							<option>Choose City..</option>
+							<option>Dehradun</option>
+							<option>Almora</option>
+							<option>Dehradun</option>
+							<option >Haldwani</option>
+							<option>Haridwar</option>
+							<option>Joshimath</option>
+							<option>Kashipur</option>
+							<option >Khatima</option>
+							<option>Mussoorie</option>
+							<option>Nainital</option>
+							<option>Panthnagar</option>
+							<option >Pauri</option>
+							<option>Purola</option>
+							<option>Ramnagar</option>
+							<option>Ranikhet</option>
+							<option >Rishikesh</option>
+							<option>Roorkee</option>
+							<option >Srinagar</option>
+						    <option >Uttarkashi</option>
+						    <option>Vikas Nagar</option>
+							
 						</select>
 					</label>
 						<label>
