--- a/event.html
+++ b/event.html
@@ -77,31 +77,15 @@
   <div class="main">
     <div class="event2bar">
 
-      <!--**** header area start **** -->
-
-      <header class="header_area" id="header">
-        <div class="container-fluid h-100">
-          <div class="row h-100">
-            <div class="col-12 h-100">
-              <nav class="h-100 navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#wbnav"
-                  aria-controls="wbnav" aria-expanded="false" aria-label="Toggle navigation"><span
-                    class="fa fa-bars"></span></button>
-              </nav>
-            </div>
-          </div>
-        </div>
-      </header>
-
-      <!-- *** header area end *** -->
-      <img src="img/eve.png" alt="" width="1519px" height="600px" style=" margin-top: 130px;  position: relative;
+    <img src="img/eve.png" alt="" width="100%" height="400px" style=" margin-top: 110px;  position: relative;
       text-align: center;
     ">
       <h2 style=" position: absolute;
       top: 40%;
       left: 50%;
       transform: translate(-50%, -50%) ; color: white;;
-    ">EVENTS</h2> <br> <h4 style=" position: absolute;
+    ">EVENTS</h2> <br> 
+    <h4 style=" position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);  color: white;
