--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,9 +30,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <!-- <li class="nav-item active">
                             <a class="nav-link active" href="index.html">HOME</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
                         </li>
@@ -86,7 +86,7 @@
                     </p>
                     <a href="about.html">
                         <button class="btn btn-primary px-5 py-2 primary-btn">
-                            NOW MORE
+                            KNOW MORE
                         </button>
                     </a>
                 </div>
@@ -111,7 +111,7 @@
                 <img class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
             </div>
             <div class="img4">
-                <img class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
+                <img class="simg" src="sponsorsimg/MOLogo.png" alt="Mangosorange">
             </div>
         </div>
     </section>
