Changes in Contact Page

--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                   <div class="text-one">
                     <a href="https://goo.gl/maps/pbUCwkLDEffmwu7y5">
                     AAG – 11, Shipra Krishna Azure <br> Kaushambi, Ghaziabad, UP – 201010</a>
-                    </div>
+                  </div>
                   <div class="text-two"></div>
                 </div>
                 <div class="phone details">
@@ -160,7 +160,7 @@
               </div>
               <div class="right-side">
                 <div class="topic-text">Send us a message</div>
-                <p>If you have any query please do contact us !</p>
+                <!-- <p>If you have any query please do contact us !</p> -->
               <form action="#">
                 <div class="input-box">
                   <input type="text" placeholder="Enter your name">
@@ -168,10 +168,10 @@
                 <div class="input-box">
                   <input type="text" placeholder="Enter your email">
                 </div>
-                <div class="number">
-                    <input type="text" placeholder="&nbsp;&nbsp; Phone number">
+                <div class="input-box">
+                    <input type="text" placeholder="Enter your number">
                   </div>
-                <div class="input-box message-box">
+                <div class="input-box">
                     <input type="text" placeholder="Enter your message">
                 </div>
                 <div class="button">
