--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
